# prodkit

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  install-remote.sh  install.sh  pyproject.toml
.prodkit/: config.yml
.prodkit/commands/: create-issues.md  dev.md  init-repo.md  prodkit.create-issues.md  prodkit.dev.md  prodkit.prd.md  prodkit.review.md
src/prodkit/: __init__.py  cli.py  install.sh
src/prodkit/.prodkit/commands/: prodkit.code-review.md  prodkit.create-issues.md  prodkit.dev.md  prodkit.gap-analysis.md  prodkit.init-repo.md  prodkit.market-research.md  prodkit.plan-sprint.md  prodkit.prd.md  prodkit.product-arch.md  prodkit.review.md  prodkit.sprint-cycle.md  prodkit.sprint-tech.md  prodkit.test.md
