[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prodkit-cli"
version = "0.1.0"
description = "ProdKit CLI - Enterprise product development workflow framework for AI coding agents. Build products from PRD to production with TDD, GitHub integration, and AI-powered code review."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ProdKit Team" }
]
keywords = [
    "prodkit",
    "product-development",
    "workflow",
    "tdd",
    "github",
    "ai-coding",
    "claude-code",
    "agile",
    "sprint-planning",
    "code-review"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
prodkit = "prodkit.cli:main"

[project.urls]
Homepage = "https://github.com/kiranshivaraju/prodkit"
Documentation = "https://github.com/kiranshivaraju/prodkit#readme"
Issues = "https://github.com/kiranshivaraju/prodkit/issues"
Source = "https://github.com/kiranshivaraju/prodkit"

[tool.hatch.build.targets.wheel]
packages = ["src/prodkit"]

[tool.hatch.build.targets.wheel.force-include]
"src/prodkit/.prodkit" = "prodkit/.prodkit"
"src/prodkit/install.sh" = "prodkit/install.sh"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
